# pillow-generator

./: .gitignore  LICENSE  README.md  main.py  pack2exe.bat  pyproject.toml
examples/: README.md  base_image_parameter_example.py  example_usage.py  image_return_example.py  底图参数化功能说明.md  返回Image对象功能说明.md  项目名称修复说明.md
src/core/: __init__.py  history.py  models.py  project_manager.py  renderer.py  text_utils.py
src/ui/: canvas_view.py  code_generator.py  layer_panel.py  main_window.py  property_panel.py
tests/: test_project_manager.py  test_renderer.py  test_ui_interactions.py
